update dark-mode / fix some bugs

--- a/index.html
+++ b/index.html
@@ -320,24 +320,21 @@
                             <div class="inner-left">
                                 <p>
                                     Hi ! My name is Tran Phuong Dinh, and I am a
-                                    second year student at Ho Chi Minh
-                                    University Of Science. I have a strong
-                                    passion about Front-end web development, and
-                                    I've learnt Front-end for eight months and I
-                                    got some certificates of HTML-CSS-JS and
-                                    Front-end frameworks. One of my favorite
-                                    quotes is from Linus Torvalds: “Talk is
-                                    cheap. Show me the code !”.
+                                    third year student at Ho Chi Minh University
+                                    Of Science. I have a strong passion about
+                                    Front-end web development, and I've learnt
+                                    Front-end for one year and I got some
+                                    certificates of HTML-CSS-JS and Front-end
+                                    frameworks. One of my favorite quotes is
+                                    from Linus Torvalds: “Talk is cheap. Show me
+                                    the code !”.
                                 </p>
                                 <a href="#">
                                     <div class="button learn-more">
                                         Learn More
                                     </div>
                                 </a>
-                                <a
-                                    href="https://drive.google.com/file/d/12tHLTZ_PqPGUiRm2OqHuT3SYUyk_Xpqw/view?usp=sharing"
-                                    target="_blank"
-                                >
+                                <a href="#">
                                     <div class="button">Download CV</div>
                                 </a>
                             </div>
