update new info

--- a/index.html
+++ b/index.html
@@ -49,12 +49,27 @@
                     <div class="knowledge-col">
                         <h3 class="knowledge-col__title">education</h3>
                         <div class="knowledge-col__info">
-                            <h3 class="info-name">
+                            <h3
+                                class="info-name"
+                                style="text-transform: uppercase"
+                            >
                                 University Of Science - Vietnam National
                                 University
                             </h3>
                             <p class="info-year">
                                 Student <span>•Sep 2019 - Present</span>
+                            </p>
+                        </div>
+                        <div class="knowledge-col__info">
+                            <h3
+                                class="info-name"
+                                style="text-transform: uppercase"
+                            >
+                                PROFESSIONAL FRONT-END DEVELOPER TRAINING COURSE
+                                - CYBERSOFT ACADEMY
+                            </h3>
+                            <p class="info-year">
+                                Student <span>•Jul 2021 - Apr 2022</span>
                             </p>
                         </div>
                         <div class="knowledge-col__info">
@@ -101,9 +116,10 @@
                             <div class="info-tags">
                                 <span class="tag">C++</span>
                                 <span class="tag">HTML/CSS</span>
-                                <span class="tag">React Js</span>
+                                <span class="tag">ReactJS</span>
+                                <span class="tag">NextJS</span>
                                 <span class="tag">Jquery</span>
-                                <span class="tag">Git</span>
+                                <span class="tag">Git/Gitlab</span>
                             </div>
                         </div>
                     </div>
@@ -111,6 +127,21 @@
                 <div class="description-modal__details-certificates">
                     <h3 class="certificates-title">certificates</h3>
                     <div class="certificates">
+                        <img
+                            class="certificates-img"
+                            src="./images/Cybersoft_Certificate.jpg"
+                            alt="Certificate Image"
+                        />
+                        <img
+                            class="certificates-img"
+                            src="./images/bootstrap.webp"
+                            alt="Certificate Image"
+                        />
+                        <img
+                            class="certificates-img"
+                            src="./images/frontendBasic.webp"
+                            alt="Certificate Image"
+                        />
                         <img
                             class="certificates-img"
                             src="./images/codelearn0.webp"
@@ -155,17 +186,10 @@
                             class="certificates-img"
                             src="./images/codelearn10.webp"
                             alt="Certificate Image"
-                        /><img
-                            class="certificates-img"
-                            src="./images/bootstrap.webp"
-                            alt="Certificate Image"
-                        /><img
+                        />
+                        <img
                             class="certificates-img"
                             src="./images/algorithmToolbox.webp"
-                            alt="Certificate Image"
-                        /><img
-                            class="certificates-img"
-                            src="./images/frontendBasic.webp"
                             alt="Certificate Image"
                         />
                     </div>
@@ -279,11 +303,11 @@
                                     </li>
                                     <li>
                                         <a
-                                            href="https://www.youtube.com/channel/UCRvegrzTa8Lof_PE0YxRhew"
+                                            href="https://www.linkedin.com/in/dinh-tran-phuong/"
                                             target="_blank"
                                         >
                                             <span
-                                                class="fa fa-youtube"
+                                                class="fa fa-linkedin"
                                                 aria-hidden="true"
                                             ></span>
                                         </a>
@@ -334,7 +358,10 @@
                                         Learn More
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a
+                                    href="./public/static/CV.pdf"
+                                    target="_blank"
+                                >
                                     <div class="button">Download CV</div>
                                 </a>
                             </div>
@@ -344,7 +371,7 @@
                                         <p><span>Birthday:</span>02/06/2001</p>
                                     </li>
                                     <li>
-                                        <p><span>Age:</span>20</p>
+                                        <p><span>Age:</span>21</p>
                                     </li>
                                     <li>
                                         <p>
@@ -411,6 +438,72 @@
                     </div>
                     <div class="portfolio__galery">
                         <ul class="portfolio__galery-list">
+                            <li
+                                class="all page galery-item galery-item-tooltip"
+                                data-name="Cybersoft Elearning"
+                            >
+                                <div class="item__img">
+                                    <div class="source-demo">
+                                        <a
+                                            href="https://github.com/tranphuongdinh/elearningnew-client"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-source.png"
+                                                alt="Source"
+                                            />
+                                        </a>
+                                        <a
+                                            href="https://elearning-cybersoft.vercel.app/"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-demo.png"
+                                                alt="Demo"
+                                            />
+                                        </a>
+                                    </div>
+                                    <img
+                                        src="./images/cyberlearning-page-bg.png"
+                                        alt="Cybersoft Elearning"
+                                    />
+                                </div>
+                            </li>
+                            <li
+                                class="all page galery-item galery-item-tooltip"
+                                data-name="One More Review"
+                            >
+                                <div class="item__img">
+                                    <div class="source-demo">
+                                        <a
+                                            href="https://github.com/hachihao792001/one_more_review"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-source.png"
+                                                alt="Source"
+                                            />
+                                        </a>
+                                        <a
+                                            href="https://onemorereview.vercel.app/"
+                                            target="_blank"
+                                            class="source-demo__button"
+                                        >
+                                            <img
+                                                src="./images/web-demo.png"
+                                                alt="Demo"
+                                            />
+                                        </a>
+                                    </div>
+                                    <img
+                                        src="./images/omr-page-bg.png"
+                                        alt="One More Review"
+                                    />
+                                </div>
+                            </li>
                             <li
                                 class="all page galery-item galery-item-tooltip"
                                 data-name="Movies.net"
@@ -856,11 +949,7 @@
                                 </div>
                             </li>
                             <li
-                                class="
-                                    all
-                                    others
-                                    galery-item galery-item-tooltip
-                                "
+                                class="all others galery-item galery-item-tooltip"
                                 data-name="Social Responsibility - WHAT AND WHY?"
                             >
                                 <div class="item__img">
@@ -884,11 +973,7 @@
                                 </div>
                             </li>
                             <li
-                                class="
-                                    all
-                                    others
-                                    galery-item galery-item-tooltip
-                                "
+                                class="all others galery-item galery-item-tooltip"
                                 data-url=""
                                 data-name="Project Snake - The Game"
                             >
@@ -913,11 +998,7 @@
                                 </div>
                             </li>
                             <li
-                                class="
-                                    all
-                                    others
-                                    galery-item galery-item-tooltip
-                                "
+                                class="all others galery-item galery-item-tooltip"
                                 data-name="Coding Flappy Bird in 60 minutes"
                             >
                                 <div class="item__img">
